--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <title>Simulador de Investimentos</title>
 </head>
 <body>
+  <div class="container__master">
+    <div class="container__header">
+      <header></header>
+    </div>
+    <div class="container__main">
+      <main></main>
+    </div>
+  </div>
   
 </body>
 </html>
